--- a/_posts/2022-12-05-mypsp.md
+++ b/_posts/2022-12-05-mypsp.md
@@ -1,6 +1,6 @@
 ---
 title:  "Solving PSP Question."
-
+author: Vivek Sharma
 date: 2022-12-05 00:00:00 -500
 categories: [c, code,psp,college]
 tags: [c,codes,college]
