--- a/_posts/2022-12-05-mypsp.md
+++ b/_posts/2022-12-05-mypsp.md
@@ -4,6 +4,7 @@ title:  "Solving PSP Question."
 date: 2022-12-05 00:00:00 -500
 categories: [c, code,psp,college]
 tags: [c,codes,college]
+render_with_liquid: false
 ---
 # Solving PSP Question
 
